Replace image 14 with met.jpg and add Barry Goldwater quote

--- a/photo2026.html
+++ b/photo2026.html
@@ -22,7 +22,7 @@ var imageGallery = [
 	"{{ base_url }}/assets-photo2026/pak.jpg",
 	"{{ base_url }}/assets-photo2026/ghana.jpg",
 	"{{ base_url }}/assets-photo2026/tan.jpg",
-	"{{ base_url }}/assets-photo2026/slov.jpg",
+	"{{ base_url }}/assets-photo2026/met.jpg",
 	"{{ base_url }}/assets-photo2026/camera.jpeg",
 
 	
@@ -43,7 +43,7 @@ var imageText = [
 "<em>We shall not cease from exploration, and the end of all our exploring, will be to arrive where we started, and know the place for the first time.</em>&nbsp;&nbsp;‑&nbsp;T.&nbsp;S.&nbsp;Eliot",
 "<em>Under capitalism, man exploits man. Under communism, it's just the opposite.</em>&nbsp;&nbsp;‑&nbsp;John&nbsp;Kenneth&nbsp;Galbraith",
 "<em>It is no measure of health to be well adjusted to a profoundly sick society.</em>&nbsp;&nbsp;‑&nbsp;Krishnamurti",
-"<em>Every revolution evaporates and leaves behind only the slime of a new bureaucracy.</em>&nbsp;&nbsp;‑&nbsp;Franz&nbsp;Kafka",
+"<em>Those who seek absolute power, even though they seek it to do what they regard as good, are simply demanding the right to enforce their own version of heaven on earth. And let me remind you, they are the very ones who always create the most hellish tyrannies. Absolute power does corrupt, and those who seek it must be suspect and must be opposed.</em>&nbsp;&nbsp;‑&nbsp;Barry&nbsp;Goldwater",
 "This is a collection of photos I've taken over the years. Lightroom says I have taken over 50,000 photos. To say this is curated is an understatement. The quotes I've attached to the photos are often related, but not always.<br><br>I now shoot with a Leica M11-P, but not a single photo in this set was taken with that camera. Almost all the photos are from when I used a Fujifilm X100S, which I shot with for over a decade. Though I've also used a Canon Rebel XT, Nikon Z9, Contax T2, Ricoh GR II, and of course, whatever phone I have.<br><br>In another life, I would have loved to be a Magnum photographer. My favorite photographers are Josef Koudelka (Exiles), Sebastião Salgado (Workers), Fred Herzog (Modern Color), Marie-Laure de Decker (Vivre pour voir), Fan Ho (Hong Kong Yesterday), and of course, Henri Cartier-Bresson (The Decisive Moment). If you're starting in photography, copy them. After that, I don't know what to do because I'm still on that step.<br><br>Qasar Younis<br>December 2025"
 
 	
